fix: improve code readability by formatting JSX and CSS, and update statistics in constants

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -713,14 +713,16 @@ nav.menu {
 }
 
 .grid-bg-section {
-  background-image: linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 1px),
+  background-image:
+    linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 1px),
     linear-gradient(90deg, var(--ifm-color-brand-dark-opacity-05) 1px, transparent 1px);
   background-size: var(--ifm-grid-bg-size-lg) var(--ifm-grid-bg-size-lg);
   clip-path: inset(0.5rem 0 1rem 0);
 }
 
 .button-grid-bg-section {
-  background-image: linear-gradient(var(--ifm-color-brand-light-opacity-15) 1px, transparent 2px),
+  background-image:
+    linear-gradient(var(--ifm-color-brand-light-opacity-15) 1px, transparent 2px),
     linear-gradient(90deg, var(--ifm-color-brand-light-opacity-15) 1px, transparent 2px);
   background-size: var(--ifm-grid-bg-size-sm) var(--ifm-grid-bg-size-sm);
   clip-path: inset(0.2rem);
@@ -729,7 +731,8 @@ nav.menu {
 }
 
 .button-grid-bg-section-dark {
-  background-image: linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px),
+  background-image:
+    linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px),
     linear-gradient(90deg, var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px);
   background-size: var(--ifm-grid-bg-size-sm) var(--ifm-grid-bg-size-sm);
   position: absolute;
@@ -737,7 +740,8 @@ nav.menu {
 }
 
 .button-grid-bg-github {
-  background-image: linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px),
+  background-image:
+    linear-gradient(var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px),
     linear-gradient(90deg, var(--ifm-color-brand-dark-opacity-05) 1px, transparent 2px);
   background-size: var(--ifm-grid-bg-size-sm) var(--ifm-grid-bg-size-sm);
   scale: 0.9;
@@ -763,7 +767,8 @@ nav.menu {
   height: 100%;
   background-size: 50px 50px;
   /* Adjust the grid size as needed */
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+  background-image:
+    linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
     linear-gradient(to bottom, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
   z-index: 0;
 }
@@ -1150,7 +1155,8 @@ span.token.tag.script.language-javascript {
   border: 2px solid transparent;
   border-bottom: none;
   border-radius: 0.75rem;
-  background-image: linear-gradient(180deg, #232426 0%, #121315 100%), linear-gradient(180deg, #555656 0%, #121315 100%);
+  background-image:
+    linear-gradient(180deg, #232426 0%, #121315 100%), linear-gradient(180deg, #555656 0%, #121315 100%);
   background-origin: border-box;
   background-clip: padding-box, border-box;
 }
@@ -1167,7 +1173,8 @@ span.token.tag.script.language-javascript {
   left: 0;
   width: 100%;
   height: 100%;
-  background: repeating-linear-gradient(
+  background:
+    repeating-linear-gradient(
       0deg,
       rgba(255, 255, 255, 0.08),
       rgba(255, 255, 255, 0.08) 0.5px,
